--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ p {
 
     body {
         background: #ffffff;
-        color: rgb(242, 235, 235);
+        color: rgb(10, 10, 10);
         padding: 20px 160px;
         height: 100vh;
         padding: 20px 20px;
@@ -148,10 +148,12 @@ p {
 
     h4 {
         font-size: 20px;
+        margin-top: 20%;
     }
 
     p {
         width: 400px;
+        font: bold;
     }
 
     body::before {
@@ -168,8 +170,8 @@ p {
 
     .imagem-tenis {
         position: absolute;
+        margin-top: 120%;
         left: 3%;
-        margin-top: 90%;
         width: 300px;
         transform: rotate(-25deg);
         transition: 1s;
@@ -183,7 +185,7 @@ p {
         left: 50%;
         transform: translate(-50%, -50%);
         color: black;
-        font-size: 100px;
+        font-size: 140px;
         font-weight: bold;
         opacity: 0.1;
 
@@ -197,4 +199,15 @@ p {
         margin-top: 25%;
         border-radius: 50%;
     }
-}
+
+    .botao-carrinho {
+    background: #eeefeb;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 16px;
+    color: black;
+    cursor: pointer;
+    transition: 0.5s;
+    position: absolute;
+    margin-top: 10%;
+}}
