--- a/styles.css
+++ b/styles.css
@@ -201,13 +201,13 @@ p {
     }
 
     .botao-carrinho {
-    background: #eeefeb;
+    background: #050700;
     padding: 10px 20px;
     border-radius: 20px;
     font-size: 16px;
-    color: black;
+    color: rgb(243, 239, 239);
     cursor: pointer;
     transition: 0.5s;
     position: absolute;
-    margin-top: 10%;
+    margin-top: 15%;
 }}
